added snake game and todo app as submodules

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h2>list of projects</h2>
         <p>
             <ul>
-                <li><a href="projects/snake/snake.html">basic snake game with html5 and javascript</a> </li>
-                <li><a href="projects/todo/todo.html">basic todo app with vue js and bootstrap</a> </li>
+                <li><a href="snake-js/index.html">basic snake game with html5 and javascript</a> </li>
+                <li><a href="projects/hello-vue/index.html">basic todo app with vue js and bootstrap 4</a> </li>
 
             </ul>
         </p>
