--- a/index.html
+++ b/index.html
@@ -14,21 +14,25 @@
     </head>
     <body>
 
-        <h1>WELCOME TO DIVINO PROJECTS</h1>
+        <h1>WELCOME TO DIVINO'S PROJECTS</h1>
 
-        <h2>list of projects</h2>
+        <h2>List of Projects</h2>
         <p>
-            <ul>
+            <ol type="1">
                 <li><a href="snake-js/index.html">basic snake game with html5 and javascript</a> </li>
                 <li><a href="projects/hello-vue-todo/index.html">basic todo app with vue js and bootstrap 4</a> </li>
 
-            </ul>
+            </ol>
         </p>
         
+        <div class="earth-container">
+            <div id="earth"></div>
+        </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
    
-        <script src="" async defer></script>
+        <!-- <script src="" async defer></script> -->
+        <!-- <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script> -->
     </body>
 </html>
