--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h2>List of Projects</h2>
         <p>
             <ol type="1">
-                <li><a href="snake-js/index.html">basic snake game with html5 and javascript</a> </li>
-                <li><a href="projects/hello-vue-todo/index.html">basic todo app with vue js and bootstrap 4</a> </li>
+                <li><a href="projects/snake-js/">basic snake game with html5 and javascript</a> </li>
+                <li><a href="projects/hello-vue-todo/">basic todo app with vue js and bootstrap 4</a> </li>
 
             </ol>
         </p>
